--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ngxs/devtools-plugin": "^3.7.5",
+    "@ngxs/logger-plugin": "^3.7.5",
+    "@ngxs/storage-plugin": "^3.7.5",
+    "@ngxs/store": "^3.7.5",
+    "add": "^2.0.6",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
